--- a/HalloAppClip/fa.lproj/Localizable.strings
+++ b/HalloAppClip/fa.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "این ورژن قدیمی است";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "جستجو";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "بیشتر بدانید";
 
