--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -61,6 +61,9 @@
 /* Title for generic delete button. */
 "Delete" = "حذف";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "جستجو";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "بیشتر بدانید";
 
