--- a/Share Extension/nl.lproj/Localizable.strings
+++ b/Share Extension/nl.lproj/Localizable.strings
@@ -61,6 +61,9 @@
 /* Title for generic delete button. */
 "Delete" = "Verwijderen";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Zoeken";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Meer informatie";
 
