--- a/Halloapp/fa.lproj/Localizable.stringsdict
+++ b/Halloapp/fa.lproj/Localizable.stringsdict
@@ -207,9 +207,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>میتوانید یک مورد انتخاب کنید.</string>
+			<string>میتوانید حداکثر یک مورد انتخاب کنید</string>
 			<key>other</key>
-			<string>میتوانید حداکثر d% مورد انتخاب کنید.</string>
+			<string>میتوانید حداکثر d% مورد انتخاب کنید</string>
 		</dict>
 	</dict>
 	<key>privacy.n.contacts</key>
@@ -227,7 +227,7 @@
 			<key>other</key>
 			<string>d% مخاطب</string>
 			<key>zero</key>
-			<string>هیچ</string>
+			<string>فاقد مخاطب</string>
 		</dict>
 	</dict>
 </dict>
