--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -277,6 +277,12 @@
 /* Text displayed in place of a comment that is currently being deleted. */
 "comment.deleting" = "در حال حذف نظر";
 
+/* Alert message when missing microphone access */
+"comment.mic.access.denied.message" = "برای فعال کردن ضبط صدا، میکروفون را در تنظیمات فعال کنید";
+
+/* Alert title when missing microphone access */
+"comment.mic.access.denied.title" = "خطا در دسترسی به میکروفون";
+
 /* Text displayed in place of comment timestamp while comment is being posted. */
 "comment.posting" = "در حال پست کردن...";
 
@@ -1146,6 +1152,9 @@
 
 /* Settings > Notifications: label for the toggle that turns new comment notifications on or off. */
 "settings.notifications.comments" = "نظرها";
+
+/* Instructions for enabling notifications permissions */
+"settings.notifications.disabled.instructions" = "لطفاً اعلان‌ها را در تنظیمات آیفون فعال کنید.";
 
 /* Settings > Notifications: label for the toggle that turns new post notifications on or off. */
 "settings.notifications.posts" = "پست‌ها";
