--- a/Notification Service Extension/tr.lproj/Localizable.strings
+++ b/Notification Service Extension/tr.lproj/Localizable.strings
@@ -4,8 +4,14 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Lütfen internet bağlantını kontrol et ve tekrar dene";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Ekle";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "İptal et";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "İPTAL";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Devam et";
@@ -58,6 +64,9 @@
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Yeni bir gruba eklendin";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Ara";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Daha fazlasını öğren";
 
@@ -76,6 +85,12 @@
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@, HalloApp davetini kabul etti 🎉";
 
+/* Title for the new comment notification. */
+"notification.new.comment" = "Yeni yorum";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@, şimdi HalloApp'te ";
+
 /* Content for friend notification. */
 "notification.new.friend.content" = "%@, şimdi HalloApp'te";
 
@@ -90,6 +105,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 video";
+
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "🎤 Sesli mesaj";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Bilinmeyen kişi";
